name:             gxt
version:          0.1.0.0
synopsis:         Generator-Driven XSLT Tester
-- description:      
homepage:         https://github.com/adamduracz/gxt
license:          BSD3
license-file:     LICENSE
author:           Adam Duracz
maintainer:       adam@duracz.net
-- copyright:        
category:         Testing
build-type:       Simple
cabal-version:    >=1.8

executable gxt
  main-is:        Main.hs
  other-modules:  Schema, 
                  RegEx, 
                  Generator, 
                  XmlParser, 
                  Shrink
  build-depends:  base          == 4.8.*, 
                  QuickCheck    == 2.8.*, 
                  base64-string == 0.2.*, 
                  random        == 1.1.*, 
                  process       == 1.2.*, 
                  parsec        == 3.1.*,
                  cmdargs       == 0.10.*